--- a/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
+++ b/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forget Me Not" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JAk-RT-cHM">
-                                <rect key="frame" x="55.5" y="112" width="303" height="95"/>
+                                <rect key="frame" x="55.5" y="108" width="303" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="95" id="3Q7-6d-kBe"/>
                                 </constraints>
@@ -74,20 +74,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6J-wL-wfb">
-                                <rect key="frame" x="136.5" y="237" width="141" height="136"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="136" id="egu-wK-2dK"/>
-                                </constraints>
-                                <state key="normal" image="mic.circle" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="120"/>
-                                </state>
-                                <connections>
-                                    <action selector="recTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K34-D3-CrN"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Start identify voice" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yE-LC-2AP" userLabel="Detail Label">
-                                <rect key="frame" x="96" y="393" width="222" height="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text=" Start identify voice" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yE-LC-2AP" userLabel="Detail Label">
+                                <rect key="frame" x="96" y="435" width="222" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Gpx-QF-gpA"/>
                                 </constraints>
@@ -138,6 +126,18 @@
                                     <segue destination="0Zc-L7-AQC" kind="show" identifier="CommunitySegue" id="E94-Rx-WpZ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6J-wL-wfb">
+                                <rect key="frame" x="137" y="291" width="141" height="136"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="136" id="egu-wK-2dK"/>
+                                </constraints>
+                                <state key="normal" image="mic.circle" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="120"/>
+                                </state>
+                                <connections>
+                                    <action selector="recTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K34-D3-CrN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -148,11 +148,11 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DNL-iV-hNQ" secondAttribute="bottom" constant="94" id="Dbx-32-AdB"/>
                             <constraint firstItem="JAk-RT-cHM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GFy-7h-oth"/>
                             <constraint firstItem="3yE-LC-2AP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PNj-Fz-m7K"/>
-                            <constraint firstItem="JAk-RT-cHM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="RuS-wd-DOb"/>
+                            <constraint firstItem="JAk-RT-cHM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="RuS-wd-DOb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OKh-Bc-HUK" secondAttribute="trailing" constant="15" id="Z5S-Hd-lVT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PpM-Ih-GFb" secondAttribute="trailing" constant="20" id="b2f-0f-uAY"/>
                             <constraint firstItem="DNL-iV-hNQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="otL-D6-NLM"/>
-                            <constraint firstItem="W6J-wL-wfb" firstAttribute="top" secondItem="JAk-RT-cHM" secondAttribute="bottom" constant="30" id="qa3-JT-STe"/>
+                            <constraint firstItem="W6J-wL-wfb" firstAttribute="top" secondItem="JAk-RT-cHM" secondAttribute="bottom" constant="60" id="qa3-JT-STe"/>
                             <constraint firstItem="rHZ-Ah-dnz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="unA-Gm-Mw6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PpM-Ih-GFb" secondAttribute="bottom" constant="93" id="w5G-KM-Sk2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OKh-Bc-HUK" secondAttribute="bottom" constant="141" id="xwI-Tu-iko"/>
