--- a/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
+++ b/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
@@ -557,9 +557,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gBf-D6-Gnp">
-                                <rect key="frame" x="152" y="671" width="121" height="41"/>
+                                <rect key="frame" x="124" y="668" width="166" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="Incorrect ">
+                                <state key="normal" title="Not Correct?">
                                     <color key="titleColor" systemColor="systemRedColor"/>
                                 </state>
                                 <connections>
@@ -571,15 +571,15 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="b2P-Fo-hnq" firstAttribute="centerX" secondItem="UEd-TF-Gu3" secondAttribute="centerX" id="05F-aG-Omx"/>
-                            <constraint firstItem="gBf-D6-Gnp" firstAttribute="leading" secondItem="Re8-Cv-fAN" secondAttribute="leading" constant="152" id="0Lv-aJ-Q2m"/>
                             <constraint firstItem="xoL-JU-zAk" firstAttribute="centerX" secondItem="UEd-TF-Gu3" secondAttribute="centerX" id="1Ry-Te-dRe"/>
+                            <constraint firstItem="Re8-Cv-fAN" firstAttribute="bottom" secondItem="gBf-D6-Gnp" secondAttribute="bottom" constant="92" id="1dg-RU-9CE"/>
                             <constraint firstItem="xoL-JU-zAk" firstAttribute="top" secondItem="JbV-Gi-8hQ" secondAttribute="bottom" constant="29" id="2sg-2J-rLy"/>
+                            <constraint firstItem="gBf-D6-Gnp" firstAttribute="top" secondItem="xoL-JU-zAk" secondAttribute="bottom" constant="76" id="6Vw-fE-9kY"/>
                             <constraint firstItem="JbV-Gi-8hQ" firstAttribute="centerX" secondItem="UEd-TF-Gu3" secondAttribute="centerX" id="BLs-EY-dnm"/>
-                            <constraint firstItem="Re8-Cv-fAN" firstAttribute="trailing" secondItem="gBf-D6-Gnp" secondAttribute="trailing" constant="141" id="N0M-KJ-rmA"/>
                             <constraint firstItem="JbV-Gi-8hQ" firstAttribute="top" secondItem="b2P-Fo-hnq" secondAttribute="bottom" constant="50" id="Zw9-Es-fIC"/>
+                            <constraint firstItem="gBf-D6-Gnp" firstAttribute="leading" secondItem="Re8-Cv-fAN" secondAttribute="leading" constant="124" id="aFa-ME-qhg"/>
                             <constraint firstItem="b2P-Fo-hnq" firstAttribute="top" secondItem="Re8-Cv-fAN" secondAttribute="top" constant="30" id="ac5-US-O51"/>
-                            <constraint firstItem="Re8-Cv-fAN" firstAttribute="bottom" secondItem="gBf-D6-Gnp" secondAttribute="bottom" constant="96" id="hNN-AN-Gru"/>
-                            <constraint firstItem="gBf-D6-Gnp" firstAttribute="top" secondItem="xoL-JU-zAk" secondAttribute="bottom" constant="79" id="iSg-JH-pom"/>
+                            <constraint firstItem="Re8-Cv-fAN" firstAttribute="trailing" secondItem="gBf-D6-Gnp" secondAttribute="trailing" constant="124" id="jcO-Z3-ZYe"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Result" id="PMW-eh-Wv2"/>
