--- a/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
+++ b/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--CommunityVC-->
+        <!--Community-->
         <scene sceneID="Uv1-uf-weu">
             <objects>
                 <tableViewController id="0Zc-L7-AQC" customClass="CommunityVC" customModule="AlzAppV2" customModuleProvider="target" sceneMemberID="viewController">
@@ -48,14 +48,14 @@
                             <outlet property="delegate" destination="0Zc-L7-AQC" id="Iwc-eC-J7M"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="WFp-u5-umt"/>
+                    <navigationItem key="navigationItem" title="Community" id="WFp-u5-umt"/>
                     <connections>
                         <segue destination="MOd-Tc-a2W" kind="presentation" identifier="CommunityResultSegue" id="f1J-hF-QUr"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JGp-Oe-gfb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1843.4782608695652" y="101.11607142857143"/>
+            <point key="canvasLocation" x="1622" y="135"/>
         </scene>
         <!--Main Menu-->
         <scene sceneID="tne-QT-ifu">
@@ -74,7 +74,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6J-wL-wfb">
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6J-wL-wfb">
                                 <rect key="frame" x="136.5" y="237" width="141" height="136"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="136" id="egu-wK-2dK"/>
@@ -169,7 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="713.04347826086962" y="93.75"/>
+            <point key="canvasLocation" x="667" y="135"/>
         </scene>
         <!--AudioVC-->
         <scene sceneID="j3V-TJ-MZz">
@@ -284,7 +284,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NvE-sl-ZUy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-197.10144927536234" y="943.52678571428567"/>
+            <point key="canvasLocation" x="1374" y="1190"/>
         </scene>
         <!--Add Voice-->
         <scene sceneID="Lfy-KZ-oR7">
@@ -452,7 +452,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GSY-YF-ckS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="711.59420289855075" y="943.52678571428567"/>
+            <point key="canvasLocation" x="668" y="1190"/>
         </scene>
         <!--PhotoVC-->
         <scene sceneID="3oZ-SA-gyS">
@@ -522,7 +522,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8De-HT-62n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="wIA-ey-rFV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1756.521739130435" y="943.52678571428567"/>
+            <point key="canvasLocation" x="-117" y="1190"/>
         </scene>
         <!--Identification Result-->
         <scene sceneID="aRq-8t-hjJ">
@@ -577,7 +577,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bp2-X9-Dgn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="613" y="-679"/>
+            <point key="canvasLocation" x="-290" y="135"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tBT-Dw-cn2">
@@ -595,11 +595,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ndD-Rp-gno" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-197.10144927536234" y="93.75"/>
+            <point key="canvasLocation" x="-1284" y="593"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="5rt-d6-Vga"/>
+        <segue reference="f1J-hF-QUr"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Bart_Simpson.png" width="250" height="373"/>
