--- a/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
+++ b/AlzAppV2/AlzAppV2/Base.lproj/Main.storyboard
@@ -74,20 +74,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6J-wL-wfb">
-                                <rect key="frame" x="136.5" y="237" width="141" height="136"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="136" id="egu-wK-2dK"/>
-                                </constraints>
-                                <state key="normal" image="mic.circle" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="120"/>
-                                </state>
-                                <connections>
-                                    <action selector="recTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K34-D3-CrN"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start identify voice" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yE-LC-2AP">
-                                <rect key="frame" x="99" y="393" width="216" height="50"/>
+                                <rect key="frame" x="99" y="397" width="216" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Gpx-QF-gpA"/>
                                 </constraints>
@@ -138,21 +126,34 @@
                                     <segue destination="0Zc-L7-AQC" kind="show" identifier="CommunitySegue" id="E94-Rx-WpZ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kb3-Rx-o32">
+                                <rect key="frame" x="137" y="227" width="140" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="EWZ-pz-2VX"/>
+                                    <constraint firstAttribute="width" constant="140" id="ruh-ah-hqq"/>
+                                </constraints>
+                                <state key="normal" image="mic.circle" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="120"/>
+                                </state>
+                                <connections>
+                                    <action selector="recTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AR9-v6-1gr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="kb3-Rx-o32" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4au-Sb-iqp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rHZ-Ah-dnz" secondAttribute="bottom" constant="147" id="5Pa-6P-vkV"/>
-                            <constraint firstItem="W6J-wL-wfb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7dr-85-MZp"/>
-                            <constraint firstItem="3yE-LC-2AP" firstAttribute="top" secondItem="W6J-wL-wfb" secondAttribute="bottom" constant="20" id="BRd-zE-f9P"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DNL-iV-hNQ" secondAttribute="bottom" constant="94" id="Dbx-32-AdB"/>
                             <constraint firstItem="JAk-RT-cHM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GFy-7h-oth"/>
                             <constraint firstItem="3yE-LC-2AP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PNj-Fz-m7K"/>
                             <constraint firstItem="JAk-RT-cHM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="RuS-wd-DOb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OKh-Bc-HUK" secondAttribute="trailing" constant="15" id="Z5S-Hd-lVT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PpM-Ih-GFb" secondAttribute="trailing" constant="20" id="b2f-0f-uAY"/>
+                            <constraint firstItem="3yE-LC-2AP" firstAttribute="top" secondItem="kb3-Rx-o32" secondAttribute="bottom" constant="30" id="kxF-AM-KZs"/>
                             <constraint firstItem="DNL-iV-hNQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="otL-D6-NLM"/>
-                            <constraint firstItem="W6J-wL-wfb" firstAttribute="top" secondItem="JAk-RT-cHM" secondAttribute="bottom" constant="30" id="qa3-JT-STe"/>
+                            <constraint firstItem="kb3-Rx-o32" firstAttribute="top" secondItem="JAk-RT-cHM" secondAttribute="bottom" constant="20" id="pPd-uD-1Zo"/>
                             <constraint firstItem="rHZ-Ah-dnz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="unA-Gm-Mw6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PpM-Ih-GFb" secondAttribute="bottom" constant="93" id="w5G-KM-Sk2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OKh-Bc-HUK" secondAttribute="bottom" constant="141" id="xwI-Tu-iko"/>
@@ -163,7 +164,7 @@
                         <outlet property="collectButton" destination="rHZ-Ah-dnz" id="Xbp-L1-EKn"/>
                         <outlet property="communityButton" destination="OKh-Bc-HUK" id="jsk-JM-bn2"/>
                         <outlet property="detailLabel" destination="3yE-LC-2AP" id="iah-hG-Pyr"/>
-                        <outlet property="recButton" destination="W6J-wL-wfb" id="hs4-5f-ehA"/>
+                        <outlet property="recButton" destination="kb3-Rx-o32" id="mKi-Vo-DXg"/>
                         <segue destination="MOd-Tc-a2W" kind="presentation" identifier="ResultSegue" id="5rt-d6-Vga"/>
                     </connections>
                 </viewController>
@@ -615,7 +616,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="f1J-hF-QUr"/>
+        <segue reference="5rt-d6-Vga"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="camera" catalog="system" width="128" height="94"/>
